# agent-studio

./: .gitignore  .theme-schema.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README.zh-CN.md  TESTING_PERSISTENCE.md  config.json  docks-agentx.json  mock_conversation_acp.json
.claude/: settings.local.json
docs/: BUG_FIX_MESSAGE_ORDERING.md  CLAUDE_MD_UPDATE_SUMMARY.md  REFACTORING_PLAN.md  REFACTORING_STAGE2_SUMMARY.md  REFACTORING_STAGE4_DESIGN.md  REFACTORING_STAGE4_PHASE1_SUMMARY.md  REFACTORING_STAGE4_PHASE2_SUMMARY.md  REFACTORING_STAGE4_PHASE3_4_SUMMARY.md  REFACTORING_STAGE4_SUMMARY.md  UPDATE_FEATURE.md  clipboard-rs-README_ZH.md  conversation-acp-rendering-analysis.md  diff_summary_fix_multiple_edits.md  diff_summary_optimization.md  diff_summary_usage.md  session-update-logging-optimization.md  slash_command_floating_list.md  tool-call-update-fix.md  validated-sauteeing-naur.md
examples/: test_mcp_config.rs
locales/: en.yml  zh-CN.yml
scripts/: check-version.sh
src/: acp_client.rs  app_menus.rs  assets.rs  chat_input.rs  conversation.rs  conversation_acp.rs  editor.rs  gui_client.rs  i18n.rs  lib.rs  main.rs  menu.rs  task_list.rs  task_turn_view.rs  test_mock_data.rs  themes.rs  title_bar.rs  welcome_panel.rs  workspace.rs
tests/: diff_summary_multiple_edits_test.md  mcp_config_test.rs
themes/: adventure.json  alduin.json  ayu.json  catppuccin.json  everforest.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  (+8 more)
(+104 files in other folders)
